[package]
name = "russti"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.15", features = ["derive"]}
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
openssl = { version = "0.10", features = ["vendored"] }
clap-verbosity-flag = "1.0.1"
log = { version = "0.4.16" }
env_logger = "0.9.0"